--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -100,3 +100,13 @@ img {
 .copyright-contain{
     color: white;
 }
+
+.brand-i{
+    width: 30px;
+    height: 30px;
+}
+
+.minor-space{
+    width: 100%;
+    height: 20px;
+}
