Extra assets, css, html and resume
Signed-off-by: MawiraIke <mawiraike@gmail.com>

--- a/css/screen.css
+++ b/css/screen.css
@@ -100,3 +100,13 @@ img {
 .copyright-contain{
     color: white;
 }
+
+.brand-i{
+    width: 30px;
+    height: 30px;
+}
+
+.minor-space{
+    width: 100%;
+    height: 20px;
+}
