--- a/css/screen.css
+++ b/css/screen.css
@@ -1,112 +1,98 @@
 body {
-    color: red;
+  color: red;
 }
 
-.level1 {
-    color: green;
-}
-
-/*Add a black background to the top navigation bar*/
 .topnav {
-    background-color: #333333;
-    overflow: hidden;
+  background-color: #333333;
+  overflow: hidden;
 }
 
-/*Style the links inside the navigation bar*/
-.topnav a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
+.topnav, a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
 
-/*Style the links inside the navigation bar on hover*/
-.topnav a:hover {
-    background-color: #dddddd;
-    color: black;
+.topnav, a:hover {
+  background-color: #dddddd;
+  color: black;
 }
 
-/*Style the active link in the navigation bar*/
-.topnav a.active {
-    background-color: #4caf50;
-    color: white;
+.topnav, a.active {
+  background-color: #4caf50;
+  color: white;
 }
 
-/*Image styling*/
 img {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
 }
 
 .contain {
-    position: relative;
-    text-align: center;
-    color: white;
+  position: relative;
+  text-align: center;
+  color: white;
 }
 
 .center-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-.center-text p {
-    font-size: 20px;
+.center-text, p {
+  font-size: 20px;
 }
 
 .spacer {
-    height: 150px;
-    background-color: #dee3e0;
+  height: 150px;
+  background-color: #dee3e0;
 }
 
 .spacer-with-pdf {
-    height: 250px;
-    background-color: #242424;
-    color: white;
-    position: relative;
-    text-align: center;
+  height: 250px;
+  background-color: #242424;
+  color: white;
+  position: relative;
+  text-align: center;
 }
 
-.spacer-with-pdf a {
-    color: white;
-    position: absolute;
-    top: 35%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.spacer-with-pdf, a {
+  color: white;
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .footer-c {
-    background-color: #967850;
-    position: relative;
-    text-align: center;
-    color: #5c5c5c;
+  background-color: #967850;
+  position: relative;
+  text-align: center;
+  color: #5c5c5c;
 }
 
-/*Clear floats after the columns*/
 .row:after {
-    content: "";
-    display: table;
-    clear: both;
+  content: "";
+  display: table;
+  clear: both;
 }
 
-.row a {
-    color: #575757;
+.copyright-contain {
+  color: white;
 }
 
-.copyright-contain{
-    color: white;
+.brand-i {
+  width: 30px;
+  height: 30px;
 }
 
-.brand-i{
-    width: 30px;
-    height: 30px;
-}
-
-.minor-space{
-    width: 100%;
-    height: 20px;
+.minor-space {
+  width: 100%;
+  height: 20px;
 }
