--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -28,7 +28,7 @@ body {
 
 img {
   width: 100%;
-  height: 200px;
+  height: 50%;
   object-fit: cover;
 }
 
@@ -41,7 +41,6 @@ img {
 .center-text {
   position: absolute;
   top: 50%;
-  left: 50%;
   transform: translate(-50%, -50%);
 }
 
