--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -50,12 +50,12 @@ img {
 
 .spacer {
   height: 150px;
-  background-color: #dee3e0;
+  background-color: #102027;
 }
 
 .spacer-with-pdf {
   height: 250px;
-  background-color: #242424;
+  background-color: #1c313a;
   color: white;
   position: relative;
   text-align: center;
@@ -70,7 +70,7 @@ img {
 }
 
 .footer-c {
-  background-color: #967850;
+  background-color: #263238;
   position: relative;
   text-align: center;
   color: #5c5c5c;
@@ -89,4 +89,28 @@ img {
 .minor-space {
   width: 100%;
   height: 20px;
+}
+
+.minor-horizontal-space {
+  width: 20px;
+}
+
+.myoozik {
+  object-fit: cover;
+  height: 150px;
+  width: 150px;
+}
+
+.myoozik-link {
+  color: black;
+}
+
+.myoozik-link:hover {
+  color: black;
+}
+
+.email-img {
+  height: 20px;
+  width: 20px;
+  object-fit: cover;
 }
