--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -109,8 +109,8 @@ img {
   color: black;
 }
 
-.email-img {
-  height: 20px;
-  width: 20px;
+.footer-img {
+  height: 30px;
+  width: 30px;
   object-fit: cover;
 }
